--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "docker:start": "node dist/index.js",
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
-    "lint": "tslint ./src/**/*.ts ./test/**/*.ts",
-    "lint:fix": "tslint --fix ./src/**/*.ts ./test/**/*.ts -t verbose",
-    "pretest": "cross-env NODE_ENV=test npm run build && npm run lint",
-    "test": "cross-env NODE_ENV=test mocha --exit"
+    "lint": "tslint ./src/**/*.ts ./__tests__/**/*.ts",
+    "lint:fix": "tslint --fix ./src/**/*.ts ./__tests__/**/*.ts -t verbose",
+    "pretest": "npm run lint",
+    "test": "jest"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -25,25 +25,25 @@
     "typescript-rest": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
     "@types/chai": "4.1.7",
     "@types/cors": "2.8.4",
     "@types/dotenv": "6.1.1",
     "@types/express": "4.16.0",
     "@types/hapi__joi": "^17.1.9",
-    "@types/mocha": "5.2.5",
+    "@types/jest": "^29.5.0",
     "@types/mongodb": "3.1.27",
     "@types/mongoose": "5.5.3",
     "@types/morgan": "1.7.35",
     "@types/request": "2.48.1",
     "@types/supertest": "^2.0.12",
-    "chai": "4.2.0",
-    "cross-env": "5.2.0",
-    "mocha": "5.2.0",
+    "jest": "^29.5.0",
     "rimraf": "2.6.3",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^7.0.1",
     "tslint": "5.17.0",
     "tslint-config-prettier": "^1.17.0",
-    "typescript": "3.5.1"
+    "typescript": "^5.0.3"
   }
 }
